--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=en.html">
+    <title>ASEMANTIX™</title>
+    <script>window.location.href = "en.html";</script>
+</head>
+<body>
+    <p>Redirecting to <a href="en.html">English version</a>...</p>
+</body>
+</html>
