--- a/fr.html
+++ b/fr.html
@@ -914,8 +914,8 @@
                 <p class="patent-tagline">Le protocole asémantique fondateur — Là où seul le bruit existe</p>
                 <div class="patent-claims">25 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Asemantic transport by self-contained fragments on raw heterogeneous channels. 
-                    Fragments pass NIST SP 800-22 randomness tests. Local validation via strict equality. Zero transmitted metadata.
+                    Transport asémantique par fragments auto-porteurs sur canaux bruts hétérogènes.
+                    Les fragments passent les tests NIST SP 800-22. Validation locale par égalité stricte. Zéro métadonnée transmise.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">Chip Vendors</span>
@@ -932,8 +932,8 @@
                 <p class="patent-tagline">Transport multi-chemins adaptatif — Plus rapide, toujours invisible</p>
                 <div class="patent-claims">26 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Adaptive orchestration of asemantic transport on raw heterogeneous channels under joint latency and energy constraints.
-                    EVOL windows, thermodynamic time τ(t), cryptographic audit.
+                    Orchestration adaptative du transport asémantique sur canaux bruts hétérogènes sous contraintes conjointes de latence et d'énergie.
+                    Fenêtres EVOL, temps thermodynamique τ(t), audit cryptographique.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">Telecom</span>
@@ -950,8 +950,8 @@
                 <p class="patent-tagline">Resynchronisation — Ne jamais perdre le fil</p>
                 <div class="patent-claims">14 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Resynchronisation after disconnection via short anchors (≥128 bits). 
-                    Bounded local search. No transmitted counters.
+                    Resynchronisation via ancres cryptographiques courtes après désynchronisation.
+                    Fenêtre monotone, bisection logarithmique, forward secrecy préservé.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">LPWAN</span>
@@ -965,7 +965,10 @@
             <div class="patent-card" data-patent="vch" onclick="openModal('vch')">
                 <div class="patent-number">04</div>
                 <h3 class="patent-title">VCH</h3>
-                <p class="patent-tagline">Chaîne d'historique vérifiable — La blockchain sans blockchain</p>
+                <p class="patent-description">
+                    Chaîne d'Historique Vérifiable — preuve cryptographique sans consensus distribué.
+                    Chaîne de hachage H_i, preuves de Merkle, anti-répudiation sans blockchain.
+                </p>
                 <div class="patent-claims">13 REVENDICATIONS</div>
                 <p class="patent-description">
                     Local cryptographic accumulator. Anti-replay and anti-rollback 100% offline. 
@@ -986,8 +989,8 @@
                 <p class="patent-tagline">Réseau polymorphique — Infrastructure caméléon</p>
                 <div class="patent-claims">14 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Self-organizing mesh. Routing without revealing topology. 
-                    Ephemeral routes, self-healing, censorship resistance.
+                    Routage maillé polymorphe auto-organisé pour transport asémantique.
+                    Topologie dynamique, dispersion des fragments, obfuscation des routes.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">CDN</span>
@@ -1004,8 +1007,8 @@
                 <p class="patent-tagline">Contrôle d'accès — Vos données, vos règles, pour toujours</p>
                 <div class="patent-claims">8 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Self-enforcing containers. Access policies cryptographically bound to data. 
-                    No third-party servers.
+                    Conteneurs de données auto-exécutants avec politiques d'accès liées cryptographiquement.
+                    Verrou temporel, verrou géographique, conditions biométriques, dead-man switch.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">Santé</span>
@@ -1022,8 +1025,8 @@
                 <p class="patent-tagline">Détection d'intrusion et neutralisation — Trouver les métadonnées cachées</p>
                 <div class="patent-claims">17 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Asemantic intrusion detection and neutralization on fragment streams. NIST + χ² + Kolmogorov-Smirnov test portfolio. 
-                    Benjamini-Hochberg FDR control. Constant time.
+                    Détection d'intrusion et neutralisation sur flux de fragments asémantiques.
+                    Détection d'anomalies, isolation automatique, pièges cryptographiques.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">IDS/IPS</span>
@@ -1040,8 +1043,8 @@
                 <p class="patent-tagline">Pouls thermodynamique sans horloge — Le temps sans horloges</p>
                 <div class="patent-claims">22 REVENDICATIONS</div>
                 <p class="patent-description">
-                    Clockless synchronization via thermodynamic time (τ = E/P). 
-                    Anti-replay via energy monotonicity. EVOL window integration.
+                    Clockless synchronization via thermodynamic time τ = E/P.
+                    No GPS, no NTP, no external reference. Synchronization emerges from physics.
                 </p>
                 <div class="patent-targets">
                     <span class="target-tag">Space</span>
