--- a/fr.html
+++ b/fr.html
@@ -787,7 +787,7 @@
             <strong>Aucun réseau. Aucun opérateur. Aucune trace.</strong><br><br>
             De la Terre à Mars — 4 à 24 minutes.<br>
             Des profondeurs océaniques à la surface.<br><br>
-            <span style="color: var(--gold); font-size: 1.1em;">Votre message voyage à la vitesse de la lumière, invisible, et sans connexion.</span>
+            <span style="color: var(--gold);  font-size: 1.6em; font-weight: 600;">Votre message voyage à la vitesse de la lumière, invisible, et sans connexion.</span>
         </p>
         
         <div class="hero-stats">
