--- a/en.html
+++ b/en.html
@@ -787,7 +787,7 @@
             <strong>No network. No operator. No trace.</strong><br><br>
             From Earth to Mars — 4 to 24 minutes.<br>
             From ocean depths to surface.<br><br>
-            <span style="color: var(--gold); font-size: 1.1em;">Your message travels at the speed of light, invisible.</span>
+            <span style="color: var(--gold);  font-size: 1.6em; font-weight: 600;">Your message travels at the speed of light, invisible.</span>
         </p>
         
         <div class="hero-stats">
