--- a/fr.html
+++ b/fr.html
@@ -893,8 +893,38 @@
                 <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Latence élevée, risque d'interception</p>
                 <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> Fragments invisibles</p>
             </div>
-            
-        </div>
+            <!-- FINANCE -->
+<div class="use-case-card">
+    <div class="use-case-icon">🏦</div>
+    <h3 class="use-case-title">Finance & Trading</h3>
+    <p class="use-case-challenge"><strong>Défi :</strong> Front-running, interception d'ordres, piste d'audit</p>
+    <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + VCH + BLACK BOX — Ordres invisibles, horodatage légal, coffre-fort</p>
+</div>
+
+<!-- SANTÉ -->
+<div class="use-case-card">
+    <div class="use-case-icon">🏥</div>
+    <h3 class="use-case-title">Santé</h3>
+    <p class="use-case-challenge"><strong>Défi :</strong> Confidentialité des données patient, conformité RGPD, contrôle d'accès</p>
+    <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + BLACK BOX + VCH — Dossiers chiffrés, accès contrôlé, preuve d'audit</p>
+</div>
+
+<!-- GOUVERNEMENT -->
+<div class="use-case-card">
+    <div class="use-case-icon">🏛️</div>
+    <h3 class="use-case-title">Gouvernement & Défense</h3>
+    <p class="use-case-challenge"><strong>Défi :</strong> Communication souveraine, indépendance réseau, intrusion</p>
+    <p class="use-case-solution"><strong>Solution :</strong> Stack complète — ASEMANTIX + ORCHESTRATOR + SENTINEL + RPAG</p>
+</div>
+
+<!-- JURIDIQUE -->
+<div class="use-case-card">
+    <div class="use-case-icon">⚖️</div>
+    <h3 class="use-case-title">Juridique & Notariat</h3>
+    <p class="use-case-challenge"><strong>Défi :</strong> Preuve d'existence, non-répudiation, testament numérique</p>
+    <p class="use-case-solution"><strong>Solution :</strong> VCH + BLACK BOX — Preuve horodatée, dead-man switch, héritage</p>
+</div>
+       
     </section>
 
     <!-- Patents -->
