--- a/fr.html
+++ b/fr.html
@@ -895,7 +895,7 @@
             </div>
             <!-- FINANCE -->
 <div class="use-case-card">
-    <div class="use-case-icon">🏦</div>
+    <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏦</div>
     <h3 class="use-case-title">Finance & Trading</h3>
     <p class="use-case-challenge"><strong>Défi :</strong> Front-running, interception d'ordres, piste d'audit</p>
     <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + VCH + BLACK BOX — Ordres invisibles, horodatage légal, coffre-fort</p>
@@ -903,7 +903,7 @@
 
 <!-- SANTÉ -->
 <div class="use-case-card">
-    <div class="use-case-icon">🏥</div>
+    <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏥</div>
     <h3 class="use-case-title">Santé</h3>
     <p class="use-case-challenge"><strong>Défi :</strong> Confidentialité des données patient, conformité RGPD, contrôle d'accès</p>
     <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + BLACK BOX + VCH — Dossiers chiffrés, accès contrôlé, preuve d'audit</p>
@@ -911,7 +911,7 @@
 
 <!-- GOUVERNEMENT -->
 <div class="use-case-card">
-    <div class="use-case-icon">🏛️</div>
+    <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏛️</div>
     <h3 class="use-case-title">Gouvernement & Défense</h3>
     <p class="use-case-challenge"><strong>Défi :</strong> Communication souveraine, indépendance réseau, intrusion</p>
     <p class="use-case-solution"><strong>Solution :</strong> Stack complète — ASEMANTIX + ORCHESTRATOR + SENTINEL + RPAG</p>
@@ -919,7 +919,7 @@
 
 <!-- JURIDIQUE -->
 <div class="use-case-card">
-    <div class="use-case-icon">⚖️</div>
+    <div style="font-size: 2.5rem; margin-bottom: 1rem;">⚖️</div>
     <h3 class="use-case-title">Juridique & Notariat</h3>
     <p class="use-case-challenge"><strong>Défi :</strong> Preuve d'existence, non-répudiation, testament numérique</p>
     <p class="use-case-solution"><strong>Solution :</strong> VCH + BLACK BOX — Preuve horodatée, dead-man switch, héritage</p>
