--- a/fr.html
+++ b/fr.html
@@ -893,36 +893,36 @@
                 <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Latence élevée, risque d'interception</p>
                 <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> Fragments invisibles</p>
             </div>
-            <!-- FINANCE -->
-<div class="use-case-card">
+           <!-- Finance -->
+<div style="background: var(--gray-800); border: 1px solid var(--gray-700); border-radius: 8px; padding: 2rem; transition: border-color 0.3s;">
     <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏦</div>
-    <h3 class="use-case-title">Finance & Trading</h3>
-    <p class="use-case-challenge"><strong>Défi :</strong> Front-running, interception d'ordres, piste d'audit</p>
-    <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + VCH + BLACK BOX — Ordres invisibles, horodatage légal, coffre-fort</p>
+    <h3 style="color: var(--gold); font-size: 1.2rem; margin-bottom: 0.5rem;">Finance & Trading</h3>
+    <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Front-running, interception d'ordres, piste d'audit</p>
+    <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> ASEMANTIX + VCH + BLACK BOX</p>
 </div>
 
-<!-- SANTÉ -->
-<div class="use-case-card">
+<!-- Santé -->
+<div style="background: var(--gray-800); border: 1px solid var(--gray-700); border-radius: 8px; padding: 2rem; transition: border-color 0.3s;">
     <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏥</div>
-    <h3 class="use-case-title">Santé</h3>
-    <p class="use-case-challenge"><strong>Défi :</strong> Confidentialité des données patient, conformité RGPD, contrôle d'accès</p>
-    <p class="use-case-solution"><strong>Solution :</strong> ASEMANTIX + BLACK BOX + VCH — Dossiers chiffrés, accès contrôlé, preuve d'audit</p>
+    <h3 style="color: var(--gold); font-size: 1.2rem; margin-bottom: 0.5rem;">Santé</h3>
+    <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Confidentialité patient, RGPD, contrôle d'accès</p>
+    <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> ASEMANTIX + BLACK BOX + VCH</p>
 </div>
 
-<!-- GOUVERNEMENT -->
-<div class="use-case-card">
+<!-- Gouvernement -->
+<div style="background: var(--gray-800); border: 1px solid var(--gray-700); border-radius: 8px; padding: 2rem; transition: border-color 0.3s;">
     <div style="font-size: 2.5rem; margin-bottom: 1rem;">🏛️</div>
-    <h3 class="use-case-title">Gouvernement & Défense</h3>
-    <p class="use-case-challenge"><strong>Défi :</strong> Communication souveraine, indépendance réseau, intrusion</p>
-    <p class="use-case-solution"><strong>Solution :</strong> Stack complète — ASEMANTIX + ORCHESTRATOR + SENTINEL + RPAG</p>
+    <h3 style="color: var(--gold); font-size: 1.2rem; margin-bottom: 0.5rem;">Gouvernement & Défense</h3>
+    <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Souveraineté, indépendance réseau, intrusion</p>
+    <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> Stack complète ASEMANTIX</p>
 </div>
 
-<!-- JURIDIQUE -->
-<div class="use-case-card">
+<!-- Juridique -->
+<div style="background: var(--gray-800); border: 1px solid var(--gray-700); border-radius: 8px; padding: 2rem; transition: border-color 0.3s;">
     <div style="font-size: 2.5rem; margin-bottom: 1rem;">⚖️</div>
-    <h3 class="use-case-title">Juridique & Notariat</h3>
-    <p class="use-case-challenge"><strong>Défi :</strong> Preuve d'existence, non-répudiation, testament numérique</p>
-    <p class="use-case-solution"><strong>Solution :</strong> VCH + BLACK BOX — Preuve horodatée, dead-man switch, héritage</p>
+    <h3 style="color: var(--gold); font-size: 1.2rem; margin-bottom: 0.5rem;">Juridique & Notariat</h3>
+    <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Preuve d'existence, non-répudiation, testament</p>
+    <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> VCH + BLACK BOX</p>
 </div>
        
     </section>
