--- a/fr.html
+++ b/fr.html
@@ -891,7 +891,7 @@
                 <div style="font-size: 2.5rem; margin-bottom: 1rem;">🛰️</div>
                 <h3 style="color: var(--gold); font-size: 1.2rem; margin-bottom: 0.5rem;">Satellite</h3>
                 <p style="color: var(--gray-400); font-size: 0.9rem; margin-bottom: 1rem;"><strong style="color: var(--white);">Défi :</strong> Latence élevée, risque d'interception</p>
-                <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> Fragments invisibles</p>
+                <p style="color: var(--green); font-size: 0.9rem;"><strong>Solution :</strong> ASEMANTIX + ORCHESTRATOR</p>
             </div>
            <!-- Finance -->
 <div style="background: var(--gray-800); border: 1px solid var(--gray-700); border-radius: 8px; padding: 2rem; transition: border-color 0.3s;">
