--- a/fr.html
+++ b/fr.html
@@ -1106,6 +1106,15 @@
                 <p style="color: var(--gray-400); font-size: 0.85rem; margin-bottom: 0.5rem;">Proof of Concept validé</p>
                 <p style="color: var(--gold); font-family: 'JetBrains Mono', monospace; font-size: 0.9rem;">>20 000 fragments/s | Latence <50µs | NIST SP 800-22 ✓</p>
             </div>
+<div style="margin: 2rem 0; text-align: center;">
+    <a href="https://github.com/asemantix/asemantic-protocol" target="_blank" style="display: inline-block; background: var(--gold); color: var(--black); padding: 1rem 2rem; font-weight: 600; text-decoration: none; border-radius: 4px; font-size: 1.1rem;">
+        🧪 Essayer le Proof of Concept sur GitHub
+    </a>
+    <p style="color: var(--gray-400); margin-top: 1rem; font-size: 0.9rem;">
+        <code>pip install git+https://github.com/asemantix/asemantic-protocol.git</code>
+    </p>
+</div>
+            
         </div>
         
         <div class="cta-buttons">
