--- a/en.html
+++ b/en.html
@@ -179,6 +179,10 @@
             <p class="hero-beyond">From Earth to Mars — and beyond.</p>
             
             <div class="usp-box">
+                <p style="color: var(--gray-400); font-size: 0.95rem; margin-bottom: 1.5rem; text-align: center; line-height: 1.6;">
+    A data transmission method: off-network, metadata-free, based on self-contained fragments.<br>
+    <strong style="color: var(--white);">Validation is local: nothing transits on the channel.</strong>
+</p>
                 <h3 class="usp-title">Three unique advantages</h3>
                 <ul class="usp-list">
                     <li><span>✓</span> <strong>Invisible:</strong> Your data is indistinguishable from noise (NIST SP 800-22: 100% pass)</li>
