--- a/fr.html
+++ b/fr.html
@@ -179,6 +179,10 @@
             <p class="hero-beyond">De la Terre à Mars — et au-delà.</p>
             
             <div class="usp-box">
+                <p style="color: var(--gray-400); font-size: 0.95rem; margin-bottom: 1.5rem; text-align: center; line-height: 1.6;">
+    Un procédé de transmission de données asémantiques : hors réseau, sans métadonnées, fondé sur des fragments autoporteurs.<br>
+    <strong style="color: var(--white);">La validation est locale : rien ne transite sur le canal.</strong>
+</p>
                 <h3 class="usp-title">Trois avantages uniques</h3>
                 <ul class="usp-list">
                     <li><span>✓</span> <strong>Invisible :</strong> Vos données sont indiscernables du bruit (NIST SP 800-22 : 100% pass)</li>
