--- a/en.html
+++ b/en.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -234,10 +233,10 @@
     <nav>
         <a href="#" class="nav-logo"><span class="aion">AION</span> ASEMANTIX<span class="tm">™</span></a>
         <div class="nav-links">
+            <a href="octopus-landing.html" style="color: #a855f7; font-weight: 600;">OCTOPUS</a>
             <a href="#tute">Technology</a>
             <a href="#patents">Patents</a>
             <a href="#use-cases">Use Cases</a>
-            <a href="octopus.html" style="color: #a855f7; font-weight: 600;">OCTOPUS</a>
             <a href="https://github.com/asemantix/asemantic-protocol" target="_blank">GitHub</a>
             <a href="#contact">Contact</a>
             <a href="fr.html" class="lang-switch">FR</a>
@@ -264,18 +263,6 @@
             <p class="hero-zero">Zero metadata. Zero trace. Zero boundary.</p>
             <p class="hero-beyond">From Earth to Mars — and beyond.</p>
             
-            <!-- OCTOPUS Promo Box -->
-            <div class="octopus-promo">
-                <div class="octopus-promo-icon"><svg viewBox="0 0 400 400" width="80" height="80" xmlns="http://www.w3.org/2000/svg"><defs><radialGradient id="bg1" cx="50%" cy="30%" r="60%"><stop offset="0%" stop-color="#c084fc"/><stop offset="100%" stop-color="#7c3aed"/></radialGradient><linearGradient id="tg1" x1="0%" y1="0%" x2="100%" y2="100%"><stop offset="0%" stop-color="#a855f7"/><stop offset="50%" stop-color="#9333ea"/><stop offset="100%" stop-color="#6b21a8"/></linearGradient></defs><path d="M150,200 C100,180 50,220 30,280 C10,340 50,390 120,380 C180,370 220,340 250,300 C270,270 300,250 340,260 C380,270 395,310 380,350 C365,390 320,400 280,390" fill="none" stroke="url(#tg1)" stroke-width="22" stroke-linecap="round"/><path d="M250,200 C300,180 350,150 370,100 C385,50 350,10 290,20 C230,30 180,60 150,100 C120,140 80,130 50,100 C20,70 10,30 30,10" fill="none" stroke="url(#tg1)" stroke-width="20" stroke-linecap="round"/><path d="M180,220 C150,260 100,300 80,350 C60,400 100,420 160,400 C220,380 280,400 340,420 C400,440 420,400 400,350" fill="none" stroke="url(#tg1)" stroke-width="18" stroke-linecap="round"/><path d="M260,190 C310,170 360,200 380,250 C400,300 390,360 350,380" fill="none" stroke="url(#tg1)" stroke-width="16" stroke-linecap="round"/><path d="M140,190 C90,170 40,200 20,250 C0,300 10,360 50,380" fill="none" stroke="url(#tg1)" stroke-width="16" stroke-linecap="round"/><ellipse cx="200" cy="180" rx="70" ry="60" fill="url(#bg1)"/><ellipse cx="200" cy="145" rx="45" ry="40" fill="url(#bg1)"/><ellipse cx="175" cy="175" rx="18" ry="22" fill="#1a1a2e"/><ellipse cx="225" cy="175" rx="18" ry="22" fill="#1a1a2e"/><ellipse cx="178" cy="172" rx="7" ry="9" fill="#c084fc"/><ellipse cx="228" cy="172" rx="7" ry="9" fill="#c084fc"/><circle cx="172" cy="168" r="4" fill="#fff" opacity="0.9"/><circle cx="222" cy="168" r="4" fill="#fff" opacity="0.9"/></svg></div>
-                <h3 class="octopus-promo-title">OCTOPUS — Live Demo</h3>
-                <p class="octopus-promo-subtitle">Test invisible communication in real time</p>
-                <div class="octopus-promo-features">
-                    <span class="octopus-promo-feature"><strong>256 bits</strong> indistinguishable from noise</span>
-                    <span class="octopus-promo-feature"><strong>Polymorphic markers</strong></span>
-                    <span class="octopus-promo-feature"><strong>Zero metadata</strong></span>
-                </div>
-                <a href="octopus.html" class="btn-octopus">Try OCTOPUS</a>
-            </div>
             
             <div class="usp-box">
                 <p class="usp-intro">
