--- a/fr.html
+++ b/fr.html
@@ -188,6 +188,7 @@
     <nav>
         <a href="#" class="nav-logo"><span class="aion">AION</span> ASEMANTIX<span class="tm">™</span></a>
         <div class="nav-links">
+            <a href="octopus-landing.html" style="color: #a855f7; font-weight: 600;">OCTOPUS</a>
             <a href="#tute">Technologie</a>
             <a href="#patents">Brevets</a>
             <a href="#use-cases">Applications</a>
