--- a/octopus-landing.html
+++ b/octopus-landing.html
@@ -303,7 +303,7 @@
             <h3 class="demo-title">Lancez la Démo</h3>
             <p class="demo-desc">Une graine de test est pré-chargée. Ouvrez l'app dans deux onglets pour voir la magie opérer.</p>
             <div class="demo-info">ℹ️ La démo utilise une graine publique. Pour des communications privées, souscrivez à une offre.</div>
-            <a href="octopus_v3_finale.html?demo=true" class="btn-primary">🚀 Lancer la Démo</a>
+            <a href="https://octopus-app-beryl.vercel.app" target="_blank" class="btn-primary">🚀 Lancer la Démo</a>
         </div>
     </section>
 
@@ -348,7 +348,7 @@
                 <div class="pricing-price">Sur devis</div>
                 <div class="pricing-period">Contactez-nous</div>
                 <ul class="pricing-features"><li>Clients illimités</li><li>Déploiement sur site</li><li>Intégration API</li><li>Support 24/7</li></ul>
-                <a href="mailto:contact@asemantix.tech" class="btn-secondary pricing-btn">Nous contacter</a>
+                <a href="/cdn-cgi/l/email-protection#2b4844455f4a485f6b4a584e464a455f4253055f4e4843" class="btn-secondary pricing-btn">Nous contacter</a>
             </div>
         </div>
     </section>
@@ -378,7 +378,7 @@
         </div>
         <div class="faq-list">
             <div class="faq-item"><div class="faq-question">Et si l'application tombe en panne ?</div><div class="faq-answer">L'application fonctionne hors-ligne. Vos messages sont stockés localement. Rien n'est perdu.</div></div>
-            <div class="faq-item"><div class="faq-question">Et si ma graine est perdue ?</div><div class="faq-answer">Contactez-nous à support@asemantix.tech. Nous vous renverrons une nouvelle graine gratuitement.</div></div>
+            <div class="faq-item"><div class="faq-question">Et si ma graine est perdue ?</div><div class="faq-answer">Contactez-nous à <a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b3c0c6c3c3dcc1c7f3d2c0d6ded2ddc7dacb9dc7d6d0db">[email&#160;protected]</a>. Nous vous renverrons une nouvelle graine gratuitement.</div></div>
             <div class="faq-item"><div class="faq-question">Et si mon téléphone est volé ?</div><div class="faq-answer">Sans votre code PIN, personne ne peut accéder à l'app. Contactez-nous pour révoquer et régénérer votre graine.</div></div>
             <div class="faq-item"><div class="faq-question">Comment ajouter des membres ?</div><div class="faq-answer">Contactez-nous avec les emails. Nous générerons une nouvelle graine pour tout le groupe.</div></div>
         </div>
@@ -388,26 +388,14 @@
         <div class="footer-content">
             <div class="footer-brand"><h3>🐙 OCTOPUS</h3><p>Messagerie invisible par AION ASEMANTIX™<br>« Vous ne serez plus jamais sans connexion. »</p></div>
             <div class="footer-links"><h4>Produit</h4><a href="#how">Comment ça marche</a><a href="#demo">Démo</a><a href="#pricing">Tarifs</a></div>
-            <div class="footer-links"><h4>Support</h4><a href="mailto:support@asemantix.tech">support@asemantix.tech</a><a href="cgv.html">CGV</a><a href="mentions-legales.html">Mentions légales</a></div>
+            <div class="footer-links"><h4>Support</h4><a href="/cdn-cgi/l/email-protection#a8dbddd8d8c7dadce8c9dbcdc5c9c6dcc1d086dccdcbc0"><span class="__cf_email__" data-cfemail="20535550504f5254604153454d414e5449580e54454348">[email&#160;protected]</span></a><a href="cgv.html">CGV</a><a href="mentions-legales.html">Mentions légales</a></div>
         </div>
         <div class="footer-bottom"><p>© 2025 AION ASEMANTIX™ — Tous droits réservés</p><p style="color:var(--gold);margin-top:0.5rem;">De la Terre à Mars — et au-delà.</p></div>
     </footer>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         document.querySelectorAll('.faq-question').forEach(q => {
             q.addEventListener('click', () => {
                 const item = q.parentElement;
                 const wasOpen = item.classList.contains('open');
-                document.querySelectorAll('.faq-item').forEach(i => i.classList.remove('open'));
-                if (!wasOpen) item.classList.add('open');
-            });
-        });
-        document.querySelectorAll('a[href^="#"]').forEach(a => {
-            a.addEventListener('click', e => {
-                e.preventDefault();
-                document.querySelector(a.getAttribute('href'))?.scrollIntoView({behavior:'smooth'});
-            });
-        });
-    </script>
-</body>
-</html>
+                document.querySelectorAll('.faq-item').forEach(i => i.c
