--- a/octopus-landing.html
+++ b/octopus-landing.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -303,7 +304,7 @@
             <h3 class="demo-title">Lancez la Démo</h3>
             <p class="demo-desc">Une graine de test est pré-chargée. Ouvrez l'app dans deux onglets pour voir la magie opérer.</p>
             <div class="demo-info">ℹ️ La démo utilise une graine publique. Pour des communications privées, souscrivez à une offre.</div>
-            <a href="https://octopus-app-beryl.vercel.app" target="_blank" class="btn-primary">🚀 Lancer la Démo</a>
+            <a href="https://octopus-app-beryl.vercel.app?demo=true" target="_blank" class="btn-primary">🚀 Lancer la Démo</a>
         </div>
     </section>
 
